[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[tool.markdownlint]
ignore = 'tests/**/*.md'

[tool.markdownlint.rules]
# MD033/no-inline-html : Inline HTML : https://github.com/DavidAnson/markdownlint/blob/v0.33.0/doc/md033.md
MD013 = { allowed_elements = ['a', 'div'] }

[tool.ruff]
extend-exclude = ["docs/conf.py"]

[tool.ruff.lint]
select = [
  # pydocstyle
  "D",
  # Augment the convention by requiring an imperative mood for all
  # docstrings.
  "D401",
  # pycodestyle
  "E",
  # trailing-whitespace (W291)
  # missing-newline-at-end-of-file (W292)
  "W",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20
