# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = panvimwiki
description = Vimwiki Diary tools for conversion to Microsoft Word docx.
author = John D. Fisher
author_email = jdfenw@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/jfishe/panvimwiki
# Add here related links, for example:
# project_urls =
#     Documentation = https://pyscaffold.org/
#    Source = https://github.com/pyscaffold/pyscaffold/
#    Changelog = https://pyscaffold.org/en/latest/changelog.html
#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Download = https://pypi.org/project/PyScaffold/#files
#    Twitter = https://twitter.com/PyScaffold

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Text Editors
    Topic :: Text Editors :: Text Processing

keywords=
    panvimwiki
    vimwiki
    pandoc

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata; python_version<"3.11"
    python-dateutil >=2.8
    panflute
    pypandoc
    vim_bridge3


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install panvimwiki[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pypandoc
    pytest
    pytest-cov
    pytest-freezegun
    pytest-pretty-terminal
    python-dateutil >=2.8

[options.entry_points]
# Add here console scripts like:
console_scripts =
    delete_empty_heading = panvimwiki.filter.delete_empty_heading:main
    delete_taskwiki_heading = panvimwiki.filter.delete_taskwiki_heading:main
    delete_tag_lines = panvimwiki.filter.delete_tag_lines:main
    delete_bullet_star = panvimwiki.filter.delete_bullet_star:main
    delete_task_pending = panvimwiki.filter.delete_task_pending:main
    do_nothing = panvimwiki.filter.do_nothing:main
#     script_name = panvimwiki.module:function
# For example:
# console_scripts =
#     fibonacci = panvimwiki.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this py.test issue.
addopts =
    --cov panvimwiki --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
filterwarnings =
    error
    ignore:distutils Version classes are deprecated. Use packaging.version instead.:DeprecationWarning
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[bdist_wheel]
# Use this option if your package is pure-python
universal = 0

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.2.1
package = panvimwiki
extensions =
    markdown
    no_skeleton
